--- a/01. Udemy-Clone/style.css
+++ b/01. Udemy-Clone/style.css
@@ -61,3 +61,30 @@ body {
     padding: 10px;
     border-radius: 10px;
 }
+
+
+.sale-image img {
+    width: 100%;
+}
+
+
+.recommended {
+    padding: 10px;
+}
+
+.recommended__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.course_card{
+    width: 250px;
+}
+
+.course_card img {
+    width: 100%;
+    height: 70%;
+    border-radius: 5px;
+}
