--- a/01. Udemy-Clone/style.css
+++ b/01. Udemy-Clone/style.css
@@ -80,11 +80,65 @@ body {
 }
 
 .course_card{
-    width: 250px;
+    width: 300px;
 }
 
 .course_card img {
     width: 100%;
     height: 70%;
     border-radius: 5px;
+}
+
+
+.topics {
+    padding: 50px 10px;
+}
+
+.topics__container {
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+    flex-wrap: wrap;
+}
+
+.topics__container p {
+    padding: 10px;
+    border: solid gray 2px;
+    flex-grow: 1;
+    flex-basis: 25%;
+}
+
+
+.popular {
+    padding: 10px;
+}
+
+.popular__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+
+.footer {
+    padding: 30px;
+    background-color: black;
+    color: white;
+}
+
+.footer__one {
+    display: flex;
+    gap: 20px;
+}
+
+.footer__one p {
+    margin: 20px;
+}
+
+.footer__two {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px;
 }
