--- a/01. Udemy-Clone/style.css
+++ b/01. Udemy-Clone/style.css
@@ -15,6 +15,10 @@ body {
     align-items: center;
     gap: 10px;
     border-bottom: solid black 1px;
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 1;
 }
 
 .navbar__s1__title {
@@ -35,6 +39,7 @@ body {
     border: none;
     width: 100%;
     font-size: 16px;
+    background-color: transparent;
 }
 
 .navbar__s2 input:focus {
@@ -46,6 +51,28 @@ body {
     align-items: center;
     gap: 10px;
 }
+
+/* My Learning Popup*/
+.mylearning {
+    position: relative;
+    cursor: pointer;
+}
+
+.mylearning__popup {
+    position: absolute;
+    background-color: white;
+    border: solid black 1px;
+    width: 100px;
+    top: 150%;
+    right: 0;
+    padding: 10px;
+    display: none;
+}
+
+.mylearning:hover .mylearning__popup {
+    display: block;
+}
+
 
 
 .categories {
@@ -63,8 +90,23 @@ body {
 }
 
 
+
+.sale-image {
+    position: relative;
+}
+
 .sale-image img {
     width: 100%;
+}
+
+.sale-image__offer {
+    width: 35%;
+    border:  2px solid black;
+    background-color: white;
+    padding: 2%;
+    position: absolute;
+    top: 15%;
+    left: 7%;
 }
 
 
