--- a/01. Udemy-Clone/style.css
+++ b/01. Udemy-Clone/style.css
@@ -52,6 +52,10 @@ body {
     gap: 10px;
 }
 
+.navbar__s4 {
+    display: none;
+}
+
 /* My Learning Popup*/
 .mylearning {
     position: relative;
@@ -145,8 +149,10 @@ body {
     margin-top: 10px;
 }
 
-.course_card{
-    width: 300px;
+.course_card {
+    flex-grow: 1;
+    flex-basis: 20%;
+    margin: 5px;
 }
 
 .course_card img {
@@ -207,4 +213,32 @@ body {
     justify-content: space-between;
     align-items: center;
     margin: 20px;
+}
+
+
+
+/* Responsive Design */
+
+@media screen and (max-width:800px) {
+    body {
+        font-size: 10px;
+    }
+}
+
+@media screen and (max-width:600px) {
+   .course_card {
+    flex-basis: 40%;
+   }
+
+   .categories {
+    display: none;
+   }
+
+   .navbar__s2, .navbar__s3 {
+    display: none;
+   }
+
+   .navbar__s4 {
+    display: block;
+   }
 }
