--- a/04. Tripadvisor-Clone/style.css
+++ b/04. Tripadvisor-Clone/style.css
@@ -16,6 +16,7 @@ body {
     position: sticky;
     top: 0;
     background-color: white;
+    z-index: 100;
 }
 
 .navbar__section {
@@ -126,4 +127,46 @@ body {
     font-size: 16px;
     border: none;
     cursor: pointer;
+}
+
+
+
+.container-1 {
+    margin-top: 50px;
+    padding: 20px;
+}
+
+.container-1 h2 {
+    font-size: 25px;
+    padding-bottom: 10px;
+}
+
+.container-1 p {
+    padding-top: 5px;
+    padding-bottom: 20px;
+    font-size: 16px;
+    font-weight: lighter;
+}
+
+.container-1-image {
+    display: flex;
+    gap: 20px;
+    overflow: hidden;
+}
+
+.container-1-section {
+    position: relative;
+}
+
+.container-1-section p {
+    position: absolute;
+    left: 10px;
+    bottom: -15px;
+    color: black;
+    font-size: 25px;
+    font-weight: 800;
+}
+
+.container-1-section img {
+    border-radius: 10px;
 }
